[tool.poetry]
name = "pymodelextractor"
version = "0.1.0"
description = ""
authors = ["Federico VIlensky <fedevilensky@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pythautomata = "0.36.3"
#pythautomata = { path = "local/path/to/pythautomata", develop = false }
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.902"
autopep8 = "^1.5.7"
pytest = "^7.2.1"
rope = "^0.19.0"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
